producerDeloyWithPlugin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: yangchangjun/examproducer:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  annotations:
    konghq.com/plugins: five-per-min
spec:
  type: NodePort
  selector:
    app: producer
  ports:
    - port: 80
      targetPort: 8080
